fixed bootscreen align

--- a/root/Winda/fonts/fonts.css
+++ b/root/Winda/fonts/fonts.css
@@ -62,6 +62,11 @@
     font-weight: 900;
 }
 
+@font-face {
+    font-family: 'Segoe Boot Semilight';
+    src: url(./segoe_slboot.ttf);
+}
+
 * {
     font-family: 'segoeui', 'segoesymbol';
     font-weight: 400;
